# proscenium

./: .gitignore  CLI.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  milvus-standalone-docker-compose.yml  neo4j-docker-compose.yml  ollama-docker-compose.yml
.github/scripts/: collect_metrics.py
.github/workflows/: black.yml  collect_metrics.yml  integration-tests.yml  pytest.yml  unit-tests.yml
demo/: cli.py  config.py  production.py  slack_config.py  slackbot.py
demo/domains/: abacus.py  legal.py  literature.py
demo/slack/: handlers.py
demo/typer/: abacus.py  legal.py  legal_config.py  literature.py  literature_config.py
docs/: slack-app-setup.md  slack-manifest.json
example/: arithmetic.py  cli.py  graph_rag.py  rag.py  rag_prep.py
example/graph_rag/: README.md  __init__.py  answer_question.py  config.py  display.py  extract_entities.py  extract_utils.py  load_entity_graph.py  load_entity_resolver.py  show_entity_graph.py  typer_app.py  util.py
example/rag/: README.md  answer_question.py  build_vector_db.py  config.py  prompts.py  typer_app.py  util.py
example/tools/: README.md  answer_question.py  answer_question_with_actors.py  arithmetic.py  config.py  typer_app.py  util.py
integration/: abacus.sh  all.sh  grag-milvus.db.bak  legal.sh  literature.sh
lapidary/patterns/: chunk_space.py  document_enricher.py  entity_resolver.py
notebooks/: Abacus-Tools.ipynb  Abacus.ipynb  Legal-GraphRAG.ipynb  Legal.ipynb  Literature-RAG.ipynb  Literature.ipynb  README.md  Slack.ipynb  test.sh
output/: README.md  answer_question.out
output/abacus/: ask-actor.out  ask.out
output/literature/: ask.out
output/rag/: build-vector-db.out
proscenium/: chunk.py  cli.py  complete.py  console.py  display.py  inference.py  invoke.py  load.py  parse.py  prompts.py  read.py  remember.py  surf.py  vector_database.py  web.py  write.py
proscenium/admin/: __init__.py
proscenium/core/: __init__.py
proscenium/display/: __init__.py  chat.py  tools.py
proscenium/interfaces/: slack.py
proscenium/patterns/: chunk_space.py  entity_resolver.py  rag.py
proscenium/scripts/: chunk_space.py  document_enricher.py  entity_resolver.py  rag.py  (+3 more)
tests/: test_display.py
website/: index.md  poster.md
(+76 files in other folders)
