[tool.poetry]
name = "proscenium"
version = "0.0.1-dev"
description = "Frame AI Agents"
authors = ["Adam Pingel <oss@pingel.org>"]
license = "ASFv2"
readme = "README.md"
packages = [{include = "proscenium"}]

[tool.poetry.dependencies]
python = "^3.11"
wget = "^3.2"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
thespian = "^4.0.0"
aisuite = {extras = ["openai,anthropic"], version = "^0.1.10"}
docstring_parser = "^0.16"
pymilvus = {extras = ["model"], version = "^2.5.4"}
nltk = "^3.9.1"

[tool.poetry.extras]
testing = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
