[tool.poetry]
name = "proscenium"
version = "0.0.1-dev"
description = "Frame AI Agents"
authors = ["Adam Pingel <oss@pingel.org>"]
license = "ASFv2"
readme = "README.md"
packages = [{include = "proscenium"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
rich = "^13.9.4"
stringcase = "^1.2.0"
thespian = "^4.0.0"
docstring_parser = "^0.16"
pymilvus = {extras = ["model"], version = "^2.5.4"}
datasets = "^3.3.2"
tiktoken = "^0.9.0"
neo4j = "^5.28.1"
gofannon = {extras = ["langchain", "smolagents"], version = "^0.25.10.1"}
langchain-community = "^0.3.18"
langchain-huggingface = "^0.1.2"
aisuite = {extras = ["openai,anthropic"], version = "^0.1.10"}

[tool.poetry.extras]
testing = ["pytest"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
